--- a/dataClean.ipynb
+++ b/dataClean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "50000"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,8 +101,172 @@
     "    myTest.loc[myTest.cons==2, 'label'] = myTest.loc[myTest.cons==2, 'label']+4\n",
     "    myTest.label = myTest.label-1\n",
     "    return myTest\n",
-    "myTable = assign_labels(myOrig)\n",
-    "myTable.shape[0]"
+    "myTable = assign_labels(myOrig)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>real</th>\n",
+       "      <th>imag</th>\n",
+       "      <th>cons</th>\n",
+       "      <th>block</th>\n",
+       "      <th>label</th>\n",
+       "      <th>final</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60.068213</td>\n",
+       "      <td>-22.219052</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14.209541</td>\n",
+       "      <td>-53.564195</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53.640412</td>\n",
+       "      <td>52.947667</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22.620277</td>\n",
+       "      <td>60.863937</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>52.958485</td>\n",
+       "      <td>53.843684</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49996</th>\n",
+       "      <td>22.695774</td>\n",
+       "      <td>-53.423727</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49997</th>\n",
+       "      <td>14.257863</td>\n",
+       "      <td>-16.236603</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49998</th>\n",
+       "      <td>-15.398305</td>\n",
+       "      <td>-21.573138</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49999</th>\n",
+       "      <td>22.886454</td>\n",
+       "      <td>59.821479</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50000</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>123.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>50001 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            real       imag  cons   block  label  final\n",
+       "0      60.068213 -22.219052   2.0     1.0   15.0    NaN\n",
+       "1      14.209541 -53.564195   2.0     1.0   18.0    NaN\n",
+       "2      53.640412  52.947667   2.0     1.0    7.0    NaN\n",
+       "3      22.620277  60.863937   2.0     1.0    6.0    NaN\n",
+       "4      52.958485  53.843684   2.0     1.0    7.0    NaN\n",
+       "...          ...        ...   ...     ...    ...    ...\n",
+       "49996  22.695774 -53.423727   2.0  1000.0   18.0    NaN\n",
+       "49997  14.257863 -16.236603   2.0  1000.0   14.0    NaN\n",
+       "49998 -15.398305 -21.573138   2.0  1000.0   13.0    NaN\n",
+       "49999  22.886454  59.821479   2.0  1000.0    6.0    NaN\n",
+       "50000        NaN        NaN   NaN     NaN    NaN  123.0\n",
+       "\n",
+       "[50001 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myTable.append({'final':123}, ignore_index=True)"
    ]
   },
   {
