--- a/dataClean.ipynb
+++ b/dataClean.ipynb
@@ -83,18 +83,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50000"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def assign_labels(myTable):\n",
     "    myTest = myTable.copy()\n",
@@ -106,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,15 +183,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49996</th>\n",
-       "      <td>22.695774</td>\n",
-       "      <td>-53.423727</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>49997</th>\n",
        "      <td>14.257863</td>\n",
        "      <td>-16.236603</td>\n",
@@ -238,9 +218,18 @@
        "      <td>NaN</td>\n",
        "      <td>123.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50001</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>123.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>50001 rows × 6 columns</p>\n",
+       "<p>50002 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -251,22 +240,23 @@
        "3      22.620277  60.863937   2.0     1.0    6.0    NaN\n",
        "4      52.958485  53.843684   2.0     1.0    7.0    NaN\n",
        "...          ...        ...   ...     ...    ...    ...\n",
-       "49996  22.695774 -53.423727   2.0  1000.0   18.0    NaN\n",
        "49997  14.257863 -16.236603   2.0  1000.0   14.0    NaN\n",
        "49998 -15.398305 -21.573138   2.0  1000.0   13.0    NaN\n",
        "49999  22.886454  59.821479   2.0  1000.0    6.0    NaN\n",
        "50000        NaN        NaN   NaN     NaN    NaN  123.0\n",
+       "50001        NaN        NaN   NaN     NaN    NaN  123.0\n",
        "\n",
-       "[50001 rows x 6 columns]"
+       "[50002 rows x 6 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myTable.append({'final':123}, ignore_index=True)"
+    "myTable = myTable.append({'final':123}, ignore_index=True)\n",
+    "myTable"
    ]
   },
   {
