--- a/test.ipynb
+++ b/test.ipynb
@@ -275,20 +275,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I'm Bob.\n",
-      "What's your name?\n"
+     "ename": "NameError",
+     "evalue": "name 'test_results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-84-fa4100fab804>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'test_results' is not defined"
      ]
     }
    ],
    "source": [
-    "   print(\"I'm Bob.\\nWhat's your name?\") a"
+    "test_results"
    ]
   },
   {
