--- a/test.ipynb
+++ b/test.ipynb
@@ -275,23 +275,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_results = {'signal': [0.2934909462928772, 0.8456000089645386]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'test_results' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-84-fa4100fab804>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'test_results' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "signal [0.2934909462928772, 0.8456000089645386]\n"
      ]
     }
    ],
    "source": [
-    "test_results"
+    "print(\"signal\", test_results['signal'])"
    ]
   },
   {
