--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
     "        layers.Dense(50, activation='relu'),\n",
     "        layers.Dense(20)\n",
     "    ])\n",
-    "    model.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    model.compile(loss=tf.keras.losses.CategoricalCrossentropy(from_logits=True),\n",
     "                optimizer=tf.keras.optimizers.Adam(0.01),\n",
     "                 metrics=['accuracy'])\n",
     "    return model\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,14 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "302/302 [==============================] - 0s 457us/step - loss: 0.3684 - accuracy: 0.7798\n"
+     "ename": "NameError",
+     "evalue": "name 'dnn_real_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-7809aac25f6d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdnn_real_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'dnn_real_model' is not defined"
      ]
     }
    ],
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,38 +187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "2008/2008 [==============================] - 1s 736us/step - loss: 0.6240 - accuracy: 0.7814 - val_loss: 0.1111 - val_accuracy: 0.9873\n",
-      "Epoch 2/10\n",
-      "2008/2008 [==============================] - 1s 689us/step - loss: 0.4083 - accuracy: 0.8208 - val_loss: 0.0967 - val_accuracy: 0.9681\n",
-      "Epoch 3/10\n",
-      "2008/2008 [==============================] - 1s 658us/step - loss: 0.2922 - accuracy: 0.8633 - val_loss: 0.0228 - val_accuracy: 0.9937\n",
-      "Epoch 4/10\n",
-      "2008/2008 [==============================] - 1s 660us/step - loss: 0.2413 - accuracy: 0.8838 - val_loss: 0.0248 - val_accuracy: 0.9905\n",
-      "Epoch 5/10\n",
-      "2008/2008 [==============================] - 1s 654us/step - loss: 0.2184 - accuracy: 0.8918 - val_loss: 0.0670 - val_accuracy: 0.9801\n",
-      "Epoch 6/10\n",
-      "2008/2008 [==============================] - 1s 663us/step - loss: 0.2127 - accuracy: 0.8958 - val_loss: 0.0065 - val_accuracy: 0.9983\n",
-      "Epoch 7/10\n",
-      "2008/2008 [==============================] - 1s 691us/step - loss: 0.2051 - accuracy: 0.8988 - val_loss: 0.0294 - val_accuracy: 0.9874\n",
-      "Epoch 8/10\n",
-      "2008/2008 [==============================] - 1s 662us/step - loss: 0.1959 - accuracy: 0.9024 - val_loss: 0.0298 - val_accuracy: 0.9897\n",
-      "Epoch 9/10\n",
-      "2008/2008 [==============================] - 1s 655us/step - loss: 0.1958 - accuracy: 0.9026 - val_loss: 0.0040 - val_accuracy: 0.9988\n",
-      "Epoch 10/10\n",
-      "2008/2008 [==============================] - 1s 657us/step - loss: 0.1955 - accuracy: 0.9023 - val_loss: 0.0056 - val_accuracy: 0.9977\n"
+     "ename": "NameError",
+     "evalue": "name 'new_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-93b88a67fc8f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_training\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"new_test\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'new_test' is not defined"
      ]
     }
    ],
    "source": [
-    "model = get_training(new_test, 10, \"new_test\")"
+    "model = get_training(myTable, 10, \"new_test\")"
    ]
   },
   {
