--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
     "        layers.Dense(50, activation='relu'),\n",
     "        layers.Dense(20)\n",
     "    ])\n",
-    "    model.compile(loss=tf.keras.losses.CategoricalCrossentropy(from_logits=True),\n",
+    "    model.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "                optimizer=tf.keras.optimizers.Adam(0.01),\n",
     "                 metrics=['accuracy'])\n",
     "    return model\n",
@@ -112,7 +112,7 @@
     "    hist.tail()\n",
     "    loss = get_total_loss(predictions, test_labels.to_numpy())\n",
     "    hist = hist.append(test_results, ignore_index=True)\n",
-    "    hist.to_csv('./results/'+ files + '.csv' , index=False)\n",
+    "    print(test_results)\n",
     "    return dnn_real_model\n",
     "\n",
     "\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-7809aac25f6d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdnn_real_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-19-7809aac25f6d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdnn_real_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'dnn_real_model' is not defined"
      ]
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,18 +187,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'new_test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-93b88a67fc8f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_training\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"new_test\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'new_test' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "1015/1015 [==============================] - 1s 729us/step - loss: 0.9204 - accuracy: 0.6714 - val_loss: 0.6973 - val_accuracy: 0.7064\n",
+      "Epoch 2/10\n",
+      "1015/1015 [==============================] - 1s 625us/step - loss: 0.5775 - accuracy: 0.7428 - val_loss: 0.4945 - val_accuracy: 0.7695\n",
+      "Epoch 3/10\n",
+      "1015/1015 [==============================] - 1s 627us/step - loss: 0.4512 - accuracy: 0.7856 - val_loss: 0.3872 - val_accuracy: 0.8234\n",
+      "Epoch 4/10\n",
+      "1015/1015 [==============================] - 1s 645us/step - loss: 0.3761 - accuracy: 0.8164 - val_loss: 0.4031 - val_accuracy: 0.8143\n",
+      "Epoch 5/10\n",
+      "1015/1015 [==============================] - 1s 629us/step - loss: 0.3437 - accuracy: 0.8296 - val_loss: 0.3945 - val_accuracy: 0.8143\n",
+      "Epoch 6/10\n",
+      "1015/1015 [==============================] - 1s 629us/step - loss: 0.3253 - accuracy: 0.8378 - val_loss: 0.3913 - val_accuracy: 0.8252\n",
+      "Epoch 7/10\n",
+      "1015/1015 [==============================] - 1s 644us/step - loss: 0.3115 - accuracy: 0.8416 - val_loss: 0.2975 - val_accuracy: 0.8454\n",
+      "Epoch 8/10\n",
+      "1015/1015 [==============================] - 1s 630us/step - loss: 0.2952 - accuracy: 0.8507 - val_loss: 0.4071 - val_accuracy: 0.8070\n",
+      "Epoch 9/10\n",
+      "1015/1015 [==============================] - 1s 627us/step - loss: 0.2865 - accuracy: 0.8492 - val_loss: 0.2749 - val_accuracy: 0.8562\n",
+      "Epoch 10/10\n",
+      "1015/1015 [==============================] - 1s 630us/step - loss: 0.2864 - accuracy: 0.8529 - val_loss: 0.2784 - val_accuracy: 0.8608\n",
+      "{'signal': [0.3043360114097595, 0.8314893841743469]}\n"
      ]
     }
    ],
@@ -208,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +358,7 @@
     }
    ],
    "source": [
-    "pd.DataFrame(test_results, )"
+    "pd.DataFrame(test_results)"
    ]
   },
   {
