--- a/test.ipynb
+++ b/test.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,49 +177,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datas = \"INR30data\"\n",
-    "labels = \"INR30labels\""
+    "my_data = \"my_data\"\n",
+    "my_labels = \"my_labels\"\n",
+    "INR30data = \"INR30data\"\n",
+    "INR30labels = \"INR30labels\"\n",
+    "INR30with90data = \"INR30with90data\"\n",
+    "INR30with90labels = \"INR30with90labels\"\n",
+    "noise30data = \"noise30data\"\n",
+    "noise30label = \"noise30label\"\n",
+    "\n",
+    "myTable = dataset(my_data, my_labels)\n",
+    "INR30Table = dataset(INR30data, INR30labels)\n",
+    "INR30with90Table = dataset(INR30with90data, INR30with90labels)\n",
+    "noise30Table = dataset(noise30data, noise30label)\n",
+    "\n",
+    "test = [myTable, INR30Table, INR30with90Table, noise30Table]\n",
+    "name = [my_data, INR30data, INR30with90data, noise30data]\n",
+    "result = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "1015/1015 [==============================] - 1s 729us/step - loss: 0.9204 - accuracy: 0.6714 - val_loss: 0.6973 - val_accuracy: 0.7064\n",
-      "Epoch 2/10\n",
-      "1015/1015 [==============================] - 1s 625us/step - loss: 0.5775 - accuracy: 0.7428 - val_loss: 0.4945 - val_accuracy: 0.7695\n",
-      "Epoch 3/10\n",
-      "1015/1015 [==============================] - 1s 627us/step - loss: 0.4512 - accuracy: 0.7856 - val_loss: 0.3872 - val_accuracy: 0.8234\n",
-      "Epoch 4/10\n",
-      "1015/1015 [==============================] - 1s 645us/step - loss: 0.3761 - accuracy: 0.8164 - val_loss: 0.4031 - val_accuracy: 0.8143\n",
-      "Epoch 5/10\n",
-      "1015/1015 [==============================] - 1s 629us/step - loss: 0.3437 - accuracy: 0.8296 - val_loss: 0.3945 - val_accuracy: 0.8143\n",
-      "Epoch 6/10\n",
-      "1015/1015 [==============================] - 1s 629us/step - loss: 0.3253 - accuracy: 0.8378 - val_loss: 0.3913 - val_accuracy: 0.8252\n",
-      "Epoch 7/10\n",
-      "1015/1015 [==============================] - 1s 644us/step - loss: 0.3115 - accuracy: 0.8416 - val_loss: 0.2975 - val_accuracy: 0.8454\n",
-      "Epoch 8/10\n",
-      "1015/1015 [==============================] - 1s 630us/step - loss: 0.2952 - accuracy: 0.8507 - val_loss: 0.4071 - val_accuracy: 0.8070\n",
-      "Epoch 9/10\n",
-      "1015/1015 [==============================] - 1s 627us/step - loss: 0.2865 - accuracy: 0.8492 - val_loss: 0.2749 - val_accuracy: 0.8562\n",
-      "Epoch 10/10\n",
-      "1015/1015 [==============================] - 1s 630us/step - loss: 0.2864 - accuracy: 0.8529 - val_loss: 0.2784 - val_accuracy: 0.8608\n",
-      "{'signal': [0.3043360114097595, 0.8314893841743469]}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>real</th>\n",
+       "      <th>imag</th>\n",
+       "      <th>cons</th>\n",
+       "      <th>block</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60.068213</td>\n",
+       "      <td>-22.219052</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14.209541</td>\n",
+       "      <td>-53.564195</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53.640412</td>\n",
+       "      <td>52.947667</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22.620277</td>\n",
+       "      <td>60.863937</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>52.958485</td>\n",
+       "      <td>53.843684</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49995</th>\n",
+       "      <td>22.718537</td>\n",
+       "      <td>-59.810006</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49996</th>\n",
+       "      <td>22.695774</td>\n",
+       "      <td>-53.423727</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49997</th>\n",
+       "      <td>14.257863</td>\n",
+       "      <td>-16.236603</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49998</th>\n",
+       "      <td>-15.398305</td>\n",
+       "      <td>-21.573138</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49999</th>\n",
+       "      <td>22.886454</td>\n",
+       "      <td>59.821479</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>50000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            real       imag  cons  block  label\n",
+       "0      60.068213 -22.219052     2      1     15\n",
+       "1      14.209541 -53.564195     2      1     18\n",
+       "2      53.640412  52.947667     2      1      7\n",
+       "3      22.620277  60.863937     2      1      6\n",
+       "4      52.958485  53.843684     2      1      7\n",
+       "...          ...        ...   ...    ...    ...\n",
+       "49995  22.718537 -59.810006     2   1000     18\n",
+       "49996  22.695774 -53.423727     2   1000     18\n",
+       "49997  14.257863 -16.236603     2   1000     14\n",
+       "49998 -15.398305 -21.573138     2   1000     13\n",
+       "49999  22.886454  59.821479     2   1000      6\n",
+       "\n",
+       "[50000 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = get_training(myTable, 10, \"new_test\")"
+    "test.pop(0)"
    ]
   },
   {
