--- a/test.ipynb
+++ b/test.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set = test.copy()\n",
+    "test_set = train_set.pop(0)\n",
+    "newTable = pd.concat([train_set[0], train_set[1], train_set[2]], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -236,43 +247,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>60.068213</td>\n",
-       "      <td>-22.219052</td>\n",
+       "      <td>29.330478</td>\n",
+       "      <td>-28.687703</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>15</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>14.209541</td>\n",
-       "      <td>-53.564195</td>\n",
+       "      <td>-27.847732</td>\n",
+       "      <td>-28.353463</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>18</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>53.640412</td>\n",
-       "      <td>52.947667</td>\n",
+       "      <td>28.177578</td>\n",
+       "      <td>28.390901</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>22.620277</td>\n",
-       "      <td>60.863937</td>\n",
+       "      <td>10.385825</td>\n",
+       "      <td>-29.102398</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>52.958485</td>\n",
-       "      <td>53.843684</td>\n",
+       "      <td>-28.665985</td>\n",
+       "      <td>-9.205075</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>7</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -283,112 +294,104 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49995</th>\n",
-       "      <td>22.718537</td>\n",
-       "      <td>-59.810006</td>\n",
+       "      <th>149995</th>\n",
+       "      <td>44.895502</td>\n",
+       "      <td>-19.757313</td>\n",
        "      <td>2</td>\n",
        "      <td>1000</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49996</th>\n",
-       "      <td>22.695774</td>\n",
-       "      <td>-53.423727</td>\n",
+       "      <th>149996</th>\n",
+       "      <td>-19.759786</td>\n",
+       "      <td>-63.314331</td>\n",
        "      <td>2</td>\n",
        "      <td>1000</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49997</th>\n",
-       "      <td>14.257863</td>\n",
-       "      <td>-16.236603</td>\n",
+       "      <th>149997</th>\n",
+       "      <td>23.753370</td>\n",
+       "      <td>-35.443046</td>\n",
        "      <td>2</td>\n",
        "      <td>1000</td>\n",
        "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49998</th>\n",
-       "      <td>-15.398305</td>\n",
-       "      <td>-21.573138</td>\n",
+       "      <th>149998</th>\n",
+       "      <td>-53.670875</td>\n",
+       "      <td>74.414821</td>\n",
        "      <td>2</td>\n",
        "      <td>1000</td>\n",
-       "      <td>13</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49999</th>\n",
-       "      <td>22.886454</td>\n",
-       "      <td>59.821479</td>\n",
+       "      <th>149999</th>\n",
+       "      <td>5.901372</td>\n",
+       "      <td>1.246928</td>\n",
        "      <td>2</td>\n",
        "      <td>1000</td>\n",
-       "      <td>6</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>50000 rows × 5 columns</p>\n",
+       "<p>150000 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            real       imag  cons  block  label\n",
-       "0      60.068213 -22.219052     2      1     15\n",
-       "1      14.209541 -53.564195     2      1     18\n",
-       "2      53.640412  52.947667     2      1      7\n",
-       "3      22.620277  60.863937     2      1      6\n",
-       "4      52.958485  53.843684     2      1      7\n",
-       "...          ...        ...   ...    ...    ...\n",
-       "49995  22.718537 -59.810006     2   1000     18\n",
-       "49996  22.695774 -53.423727     2   1000     18\n",
-       "49997  14.257863 -16.236603     2   1000     14\n",
-       "49998 -15.398305 -21.573138     2   1000     13\n",
-       "49999  22.886454  59.821479     2   1000      6\n",
+       "             real       imag  cons  block  label\n",
+       "0       29.330478 -28.687703     2      1     19\n",
+       "1      -27.847732 -28.353463     2      1     16\n",
+       "2       28.177578  28.390901     2      1      7\n",
+       "3       10.385825 -29.102398     2      1     18\n",
+       "4      -28.665985  -9.205075     2      1     12\n",
+       "...           ...        ...   ...    ...    ...\n",
+       "149995  44.895502 -19.757313     2   1000     18\n",
+       "149996 -19.759786 -63.314331     2   1000     18\n",
+       "149997  23.753370 -35.443046     2   1000     14\n",
+       "149998 -53.670875  74.414821     2   1000      4\n",
+       "149999   5.901372   1.246928     2   1000     10\n",
        "\n",
-       "[50000 rows x 5 columns]"
+       "[150000 rows x 5 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test.pop(0)"
+    "newTable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "anotherTable = dataset(\"my_data\", \"my_labels\")"
+    "train_dataset = training_set(newTable)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'signal': [0.2934909462928772, 0.8456000089645386]}"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'DataFrame' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-43-c1a49c3b83e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewTable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_dataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'DataFrame' object is not callable"
+     ]
     }
    ],
    "source": [
-    "prediction(model, \"INR30data\", \"INR30labels\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_test = pd.concat([myTable,anotherTable], ignore_index=True)"
+    "test_dataset = test_set(newTable, train_dataset)"
    ]
   },
   {
