--- a/test.ipynb
+++ b/test.ipynb
@@ -450,16 +450,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 378,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'__header__': b'MATLAB 5.0 MAT-file, Platform: MACI64, Created on: Wed Nov  4 12:39:00 2020',\n",
+       " '__version__': '1.0',\n",
+       " '__globals__': [],\n",
+       " 'Y': array([[-46.15065908-45.97239665j,  21.31575934+52.99335122j,\n",
+       "         -42.65363745+43.4915735j , ..., -52.3816687 +14.19593008j,\n",
+       "          13.91475643-16.43826557j,  42.09065184+42.00356865j],\n",
+       "        [-39.90664109-39.02029445j,  15.32350445-54.02286101j,\n",
+       "         -41.25322167-43.48855888j, ...,  15.13091497+15.10237461j,\n",
+       "         -53.92127921-61.51823241j,  41.66840015-41.89665104j],\n",
+       "        [-38.9265369 +45.58628716j,  22.0280182 -15.69420432j,\n",
+       "         -43.2269431 -43.18835256j, ..., -54.35007529-14.71810332j,\n",
+       "          15.30882515+52.02020551j, -42.93406132+41.66796065j],\n",
+       "        ...,\n",
+       "        [ 38.41171947-45.40194349j,  15.42996787-53.16444157j,\n",
+       "          41.90869573-44.07700009j, ..., -60.4693319 -59.61949204j,\n",
+       "         -52.70455229-60.10188885j,  42.41609427-42.74419355j],\n",
+       "        [-46.19816832-45.44847928j,  14.71066938+22.23639593j,\n",
+       "         -42.75898858+42.37303935j, ..., -14.4817673 -53.78288172j,\n",
+       "         -60.29201951-22.41180363j, -42.89465972-42.42184333j],\n",
+       "        [ 45.49537424-44.21387627j,  23.22662619+59.70138705j,\n",
+       "          41.79313154+42.408474j  , ...,  21.66889483-15.8094301j ,\n",
+       "          22.69084842-59.94977921j,  42.39130092+43.11656073j]])}"
+      ]
+     },
+     "execution_count": 378,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataFile = \"./communication/data1\"\n",
     "labelFile = \"./communication/data1_label\"\n",
     "my_data = sc.loadmat(dataFile)\n",
     "my_labels = sc.loadmat(labelFile)\n",
-    "my_data = my_data['Y']\n",
-    "X = my_labels['L_S_x']"
+    "my_data"
    ]
   },
   {
