--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "[50000 rows x 8 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,158 +651,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latest checkpoint restored!!\n"
+     ]
+    }
+   ],
    "source": [
-    "mlcData = pd.DataFrame({'real':real, 'imag':imag.T, 'label':symbol})"
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers\n",
+    "import numpy as np\n",
+    "import os,sys\n",
+    "import scipy.io as sc\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tensorflow.keras.layers.experimental import preprocessing\n",
+    "import time\n",
+    "from IPython.display import clear_output\n",
+    "import math\n",
+    "import mlcTest as mt\n",
+    "def dataset(dataFile, labelFile):\n",
+    "    dataFile = \"./communication/\" + dataFile\n",
+    "    labelFile = \"./communication/\" + labelFile\n",
+    "    my_data = sc.loadmat(dataFile)\n",
+    "    my_labels = sc.loadmat(labelFile)\n",
+    "    my_data = my_data['Y']\n",
+    "    X = my_labels['L_S_x']\n",
+    "    myOrig = table_data(my_data, my_labels['L_Constellations'][0], X)\n",
+    "    mytable = assign_label(myOrig)\n",
+    "    return mytable\n",
+    "\n",
+    "\n",
+    "def assign_label(data):\n",
+    "    c_4 = [1,-1]\n",
+    "    c_16 = [3,1,-1,-3]\n",
+    "    c_16r = [-3,-1,1,3]\n",
+    "    cons_4 = np.dot(np.sqrt(0.5),[complex(i,j)for i in c_4 for j in c_4])\n",
+    "    cons_16 = np.array([complex(i,j)for j in c_16 for i in c_16r])\n",
+    "    cons_16 = cons_16/np.sqrt(np.mean(np.abs(cons_16)**2))\n",
+    "    cons4 = data[data.cons==1]\n",
+    "    cons4_label = np.array([[cons_4[i-1]]for i in cons4.label])\n",
+    "    cons16 = data[data.cons==2]\n",
+    "    cons16_label = np.array([[cons_16[i-1]]for i in cons16.label.to_numpy().real.astype(int)])\n",
+    "    data[data.cons==2].index\n",
+    "    data['buffer'] = 0\n",
+    "    data['buffer'] = 0\n",
+    "    data.iloc[data[data.cons==1].index, 5] = cons4_label\n",
+    "    data.iloc[data[data.cons==2].index, 5] = cons16_label\n",
+    "    data['label_real'] = data.buffer.to_numpy().real\n",
+    "    data['label_imag'] = data.buffer.to_numpy().imag\n",
+    "    myTest = data.copy()\n",
+    "    myTest.loc[myTest.cons == 2, 'label'] = myTest.loc[myTest.cons == 2, 'label'] + 4\n",
+    "    myTest.label = myTest.label - 1\n",
+    "    return myTest\n",
+    "\n",
+    "\n",
+    "def table_data(my_data, cons, label):\n",
+    "    block = my_data.shape[1]\n",
+    "    my_data_size = my_data.shape[0] * block\n",
+    "    my_data_div = my_data.T.reshape(my_data_size, )\n",
+    "    cons_array = np.array([[cons[i]] * my_data.shape[0] for i in range(0, block)]).reshape(my_data_size, )\n",
+    "    block_array = np.array([([i + 1] * my_data.shape[0]) for i in range(0, block)]).reshape(my_data_size, )\n",
+    "    label_array = label.T.reshape(my_data_size, )\n",
+    "    test_pd = pd.DataFrame({'real': my_data_div.real, 'imag': my_data_div.imag,\n",
+    "                            'cons': cons_array, 'block': block_array,\n",
+    "                            'label': label_array})\n",
+    "    return test_pd\n",
+    "\n",
+    "def generator():\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(layers.Dense(20, use_bias=False, input_shape=[2,]))\n",
+    "    model.add(layers.Dense(50, activation='relu'))\n",
+    "    model.add(layers.Dense(2))\n",
+    "    return model\n",
+    "\n",
+    "def make_discriminator_model():\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(layers.Dense(20, use_bias=False, input_shape=[2,]))\n",
+    "    model.add(layers.Dense(50, activation = 'sigmoid'))\n",
+    "    model.add(layers.Dense(1))\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "\n",
+    "cross_entropy = tf.keras.losses.BinaryCrossentropy(from_logits=True)\n",
+    "\n",
+    "def discriminator_loss(real_output, fake_output):\n",
+    "    real_loss = cross_entropy(tf.ones_like(real_output), real_output)\n",
+    "    fake_loss = cross_entropy(tf.zeros_like(fake_output), fake_output)\n",
+    "    total_loss = real_loss + fake_loss\n",
+    "    return total_loss\n",
+    "\n",
+    "def generator_loss(fake_output):\n",
+    "    return cross_entropy(tf.ones_like(fake_output), fake_output)\n",
+    "\n",
+    "def identity_loss(real, fake):\n",
+    "    loss = tf.reduce_mean(tf.abs(real - fake))\n",
+    "    return LAMBDA * 0.5 * loss\n",
+    "\n",
+    "\n",
+    "@tf.function\n",
+    "def train_step(total, label):\n",
+    "    with tf.GradientTape(persistent=True) as tape:\n",
+    "        s = generator_s(total, training=True)\n",
+    "        n = generator_n(total, training=True)\n",
+    "        i = generator_i(total, training=True)\n",
+    "        gen = s + n + i\n",
+    "        fake_t = discriminator_t(gen, training=True)\n",
+    "        real_t = discriminator_t(total, training=True)\n",
+    "        fake_d = discriminator_d(s, training=True)\n",
+    "        real_d = discriminator_d(label, training=True)\n",
+    "        gen_loss = generator_loss(gen)\n",
+    "        disc_t_loss = discriminator_loss(real_t, fake_t)\n",
+    "        disc_d_loss = discriminator_loss(real_d, fake_d)\n",
+    "        identity_s_loss = identity_loss(label, s)\n",
+    "        identity_g_loss = identity_loss(total, gen)\n",
+    "        total_s_loss = gen_loss + (identity_s_loss + identity_g_loss)\n",
+    "        total_n_loss = identity_g_loss + gen_loss\n",
+    "        total_i_loss = identity_g_loss + gen_loss\n",
+    "        print()\n",
+    "\n",
+    "    gradients_of_s_generator = tape.gradient(total_s_loss, generator_s.trainable_variables)\n",
+    "    gradients_of_i_generator = tape.gradient(total_i_loss, generator_i.trainable_variables)\n",
+    "    gradients_of_n_generator = tape.gradient(total_n_loss, generator_n.trainable_variables)\n",
+    "    gradients_of_discriminator_t = tape.gradient(disc_t_loss, discriminator_t.trainable_variables)\n",
+    "    gradients_of_discriminator_d = tape.gradient(disc_d_loss, discriminator_d.trainable_variables)\n",
+    "    generator_s_optimizer.apply_gradients(zip(gradients_of_s_generator, generator_s.trainable_variables))\n",
+    "    generator_i_optimizer.apply_gradients(zip(gradients_of_i_generator, generator_i.trainable_variables))\n",
+    "    generator_n_optimizer.apply_gradients(zip(gradients_of_n_generator, generator_n.trainable_variables))\n",
+    "    discriminator_t_optimizer.apply_gradients(zip(gradients_of_discriminator_t, discriminator_t.trainable_variables))\n",
+    "    discriminator_d_optimizer.apply_gradients(zip(gradients_of_discriminator_d, discriminator_d.trainable_variables))\n",
+    "\n",
+    "def shuffle_data(my_table):\n",
+    "    data.sample(frac=1)\n",
+    "    real_y = (2*my_table.real.min())/(my_table.real.max() - my_table.real.min()) + 1\n",
+    "    real_x = (my_table.real.max()) / (1 + real_y)\n",
+    "    imag_y = (2*my_table.imag.min())/(my_table.imag.max() - my_table.imag.min()) + 1\n",
+    "    imag_x = (my_table.imag.max()) / (1 + imag_y)\n",
+    "    my_table.real = (my_table.real / real_x) - real_y\n",
+    "    my_table.imag = (my_table.imag/ imag_x) - imag_y\n",
+    "    train_feature = data.loc[:, ('real', 'imag')]\n",
+    "    train_label = data.loc[:, ('label_real', 'label_imag')]\n",
+    "    test_feature = tf.cast(train_feature, tf.float32)\n",
+    "    test_label = tf.cast(train_label, tf.float32)\n",
+    "    symbol = data.loc[:, 'label']\n",
+    "    return test_feature, test_label, symbol\n",
+    "\n",
+    "generator_s = generator()\n",
+    "generator_n = generator()\n",
+    "generator_i = generator()\n",
+    "discriminator_t = make_discriminator_model()\n",
+    "discriminator_d = make_discriminator_model()\n",
+    "\n",
+    "\n",
+    "generator_s_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
+    "generator_n_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
+    "generator_i_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
+    "\n",
+    "discriminator_d_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
+    "discriminator_t_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
+    "\n",
+    "checkpoint_path = \"./checkpoints/dis1\"\n",
+    "\n",
+    "ckpt = tf.train.Checkpoint(generator_s=generator_s,\n",
+    "                           generator_n=generator_n,\n",
+    "                           generator_i=generator_i,\n",
+    "                           discriminator_t=discriminator_t,\n",
+    "                           discriminator_d=discriminator_d,\n",
+    "                           generator_s_optimizer=generator_s_optimizer,\n",
+    "                           generator_n_optimizer=generator_n_optimizer,\n",
+    "                           generator_i_optimizer=generator_i_optimizer,\n",
+    "                           discriminator_d_optimizer=discriminator_d_optimizer,\n",
+    "                           discriminator_t_optimizer=discriminator_t_optimizer)\n",
+    "\n",
+    "ckpt_manager = tf.train.CheckpointManager(ckpt, checkpoint_path, max_to_keep=5)\n",
+    "\n",
+    "# if a checkpoint exists, restore the latest checkpoint.\n",
+    "if ckpt_manager.latest_checkpoint:\n",
+    "    ckpt.restore(ckpt_manager.latest_checkpoint)\n",
+    "    print ('Latest checkpoint restored!!')\n",
+    "\n",
+    "LAMBDA = 10\n",
+    "EPOCHS = 20\n",
+    "data1 = \"hard\"\n",
+    "data1_label = \"hard_label\"\n",
+    "data = dataset(data1, data1_label)\n",
+    "file_directory = './result/tes2/'\n",
+    "test_feature, test_label, symbol = shuffle_data(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "symbol = data['label']"
+    "test = generator_s(test_feature, training=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['test'] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>real</th>\n",
-       "      <th>imag</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.743564</td>\n",
-       "      <td>-0.394518</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.639424</td>\n",
-       "      <td>-0.691304</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.696289</td>\n",
-       "      <td>0.959534</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.501473</td>\n",
-       "      <td>1.278115</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.576111</td>\n",
-       "      <td>1.241222</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49995</th>\n",
-       "      <td>0.607578</td>\n",
-       "      <td>-0.740450</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49996</th>\n",
-       "      <td>0.569860</td>\n",
-       "      <td>-0.837262</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49997</th>\n",
-       "      <td>-0.593231</td>\n",
-       "      <td>-0.558543</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49998</th>\n",
-       "      <td>-0.656070</td>\n",
-       "      <td>0.287638</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49999</th>\n",
-       "      <td>0.566314</td>\n",
-       "      <td>0.918442</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>50000 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           real      imag  label\n",
-       "0      0.743564 -0.394518     12\n",
-       "1     -0.639424 -0.691304     15\n",
-       "2      0.696289  0.959534      4\n",
-       "3      0.501473  1.278115      3\n",
-       "4      0.576111  1.241222      4\n",
-       "...         ...       ...    ...\n",
-       "49995  0.607578 -0.740450     15\n",
-       "49996  0.569860 -0.837262     15\n",
-       "49997 -0.593231 -0.558543     11\n",
-       "49998 -0.656070  0.287638     10\n",
-       "49999  0.566314  0.918442      3\n",
-       "\n",
-       "[50000 rows x 3 columns]"
+       "-0.005082563"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlcData"
+    "np.array([test - test_label]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = generator_i(test_feature, training=False)\n",
+    "n = generator_n(test_feature, training=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(50000, 2), dtype=float32, numpy=\n",
+       "array([[ 0.3009687 , -0.11780295],\n",
+       "       [-0.18512276, -0.44114166],\n",
+       "       [ 0.379831  ,  0.27721882],\n",
+       "       ...,\n",
+       "       [-0.1799629 , -0.30195552],\n",
+       "       [-0.13785729,  0.02375591],\n",
+       "       [ 0.19041121,  0.2823245 ]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(i + n + test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(50000, 2), dtype=float32, numpy=\n",
+       "array([[ 0.29661748, -0.11123972],\n",
+       "       [-0.19194071, -0.43307474],\n",
+       "       [ 0.3816788 ,  0.27585855],\n",
+       "       ...,\n",
+       "       [-0.18185575, -0.29447213],\n",
+       "       [-0.14201625,  0.02752244],\n",
+       "       [ 0.19240217,  0.2841181 ]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_feature"
    ]
   },
   {
